--- a/WebApiNetcore5.Services/WebApiNetcore5.Services.csproj
+++ b/WebApiNetcore5.Services/WebApiNetcore5.Services.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WebApiNetcore5.Model\WebApiNetcore5.Model.csproj" />
