--- a/WebAPiNetcore5/WebAPiNetcore5.csproj
+++ b/WebAPiNetcore5/WebAPiNetcore5.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebApiNetcore5.DAL\WebApiNetcore5.DAL.csproj" />
     <ProjectReference Include="..\WebApiNetcore5.Services\WebApiNetcore5.Services.csproj" />
   </ItemGroup>
 
