--- a/WebAPiNetcore5/appsettings.Development.json
+++ b/WebAPiNetcore5/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Todos;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentation}/swagger.json",
     "Description": "Api.net Core 5",
