--- a/WebApiNetcore5.Services/WebApiNetcore5.Services.csproj
+++ b/WebApiNetcore5.Services/WebApiNetcore5.Services.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="IdentityService.cs" />
+    <Compile Remove="IIdentityService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.3" />
   </ItemGroup>
 
