--- a/WebAPiNetcore5/appsettings.Development.json
+++ b/WebAPiNetcore5/appsettings.Development.json
@@ -16,5 +16,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "RedisCacheSettings": {
+    "Enabled": true,
+    "ConnectionString":  "localhost"
   }
+
 }
